@startuml
hide circle
skinparam linetype ortho

entity "vaitro" {
  * vaitro_id : INT <<PK>>
  tenvaitro : VARCHAR(50)
  mota : TEXT
  trangthai : ENUM
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "donvihoc" {
  * donvihoc_id : INT <<PK>>
  madonvi : VARCHAR(20)
  tenkhoa : VARCHAR(200)
  tennganh : VARCHAR(200)
  lop : VARCHAR(100)
  khoahoc : VARCHAR(50)
  mota : TEXT
  trangthai : ENUM
  ngaytao : TIMESTAMP
}

entity "nguoidung" {
  * nguoidung_id : INT <<PK>>
  email : VARCHAR(100)
  matkhau : VARCHAR(255)
  hoten : VARCHAR(100)
  masodinhdanh : VARCHAR(20)
  ngaysinh : DATE
  gioitinh : ENUM
  sodienthoai : VARCHAR(15)
  diachi : TEXT
  donvihoc_id : INT <<FK>>
  avatar : VARCHAR(255)
  vaitro_id : INT <<FK>>
  loaitaikhoan : ENUM
  trangthai : ENUM
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "loaiquy" {
  * loaiquy_id : INT <<PK>>
  maloai : VARCHAR(50)
  tenloai : VARCHAR(100)
  ngaytao : TIMESTAMP
}

entity "nhataitro" {
  * nhataitro_id : INT <<PK>>
  tennhataitro : VARCHAR(200)
  loainhataitro : ENUM
  email : VARCHAR(100)
  sodienthoai : VARCHAR(15)
  diachi : TEXT
  website : VARCHAR(255)
  mota : TEXT
  logo : VARCHAR(255)
  nguoidung_id : INT <<FK>>
  trangthai : ENUM
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "quy" {
  * quy_id : INT <<PK>>
  tenquy : VARCHAR(200)
  loaiquy_id : INT <<FK>>
  mota : TEXT
  hinhanh : VARCHAR(255)
  sotienmuctieu : DECIMAL
  sodu : DECIMAL
  sotienhotrotoida : DECIMAL
  soluonghotrotoida : INT
  dieukienhotro : TEXT
  ngaybatdau : DATE
  ngayketthuc : DATE
  trangthai : ENUM
  nguoitao_id : INT <<FK>>
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "yeucauhotro" {
  * yeucauhotro_id : INT <<PK>>
  nguoidung_id : INT <<FK>>
  quy_id : INT <<FK>>
  lydo : TEXT
  sotiendenghi : DECIMAL
  tailieudinhkem : TEXT
  trangthai : ENUM
  ghichu : TEXT
  ngaynop : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "pheduyet" {
  * pheduyet_id : INT <<PK>>
  yeucauhotro_id : INT <<FK>>
  capduyet : TINYINT
  nguoiduyet_id : INT <<FK>>
  ketqua : ENUM
  lydo : TEXT
  ghichu : TEXT
  ngayduyet : TIMESTAMP
}

entity "khoantaitro" {
  * khoantaitro_id : INT <<PK>>
  nhataitro_id : INT <<FK>>
  quy_id : INT <<FK>>
  sotien : DECIMAL
  hinhthuc : ENUM
  magiaodich : VARCHAR(100)
  ngaytaitro : DATE
  chungtu : VARCHAR(255)
  trangthai : ENUM
  ghichu : TEXT
  nguoixacnhan_id : INT <<FK>>
  ngayxacnhan : TIMESTAMP
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "giaodich" {
  * giaodich_id : INT <<PK>>
  yeucauhotro_id : INT <<FK>>
  quy_id : INT <<FK>>
  nguoinhan_id : INT <<FK>>
  sotien : DECIMAL
  hinhthuc : ENUM
  magiaodich : VARCHAR(100)
  chungtu : VARCHAR(255)
  trangthai : ENUM
  ghichu : TEXT
  nguoithuchien_id : INT <<FK>>
  ngaygiaodich : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "taikhoannganhang" {
  * taikhoannganhang_id : INT <<PK>>
  quy_id : INT <<FK>>
  sotaikhoan : VARCHAR(50)
  nganhang : VARCHAR(100)
  chinhanh : VARCHAR(100)
  chutaikhoan : VARCHAR(100)
  trangthai : ENUM
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "sinhviennoibat" {
  * sinhviennoibat_id : INT <<PK>>
  nguoidung_id : INT <<FK>>
  hoten : VARCHAR(100)
  khoaphong : VARCHAR(100)
  namhoc : VARCHAR(20)
  hinhanh : VARCHAR(255)
  thanhtich : TEXT
  thutu : INT
  trangthai : ENUM
  ngaytao : TIMESTAMP
  ngaycapnhat : TIMESTAMP
}

entity "nhatkyhethong" {
  * nhatkyhethong_id : INT <<PK>>
  nguoidung_id : INT <<FK>>
  hanhdong : VARCHAR(100)
  loaidoituong : VARCHAR(50)
  doituong_id : INT
  mota : TEXT
  dulieucu : JSON
  dulieumoi : JSON
  ipaddress : VARCHAR(45)
  createdat : TIMESTAMP
}

vaitro ||--o{ nguoidung
donvihoc ||--o{ nguoidung
nguoidung ||--o{ nhataitro
loaiquy ||--o{ quy
nguoidung ||--o{ quy : nguoitao
nguoidung ||--o{ yeucauhotro
quy ||--o{ yeucauhotro
yeucauhotro ||--o{ pheduyet
nguoidung ||--o{ pheduyet : nguoiduyet
nhataitro ||--o{ khoantaitro
quy ||--o{ khoantaitro
nguoidung ||--o{ khoantaitro : xacnhan
yeucauhotro ||--o{ giaodich
quy ||--o{ giaodich
nguoidung ||--o{ giaodich : nguoinhan
nguoidung ||--o{ giaodich : thuchien
quy ||--o{ taikhoannganhang
nguoidung ||--o{ sinhviennoibat
nguoidung ||--o{ nhatkyhethong

@enduml
